# Buffer-7.0

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  smoke_test.py  tmp_infer.jsonl  tmp_summary.json  train.py  validate-submission.sh
agent2-decision-base/: train.py
agent2-decision-base/checkpoints/: agent2_metadata.json  supervised_dataset.jsonl
backend/: main.py  requirements.txt
backend/data/: __init__.py  sample_data.py
backend/dsa/: decision_tree.py  trie.py
backend/routes/: bulk_consumer.py  collector.py  data_routes.py  recycler.py
credless_model/: dataset_pipeline.py  feature_names.txt  metadata.json  metrics.json  model.pkl  train.py
data/: feature_docs.md  prepare_dataset.py  split_metadata.json  synthetic_generator.py
env/: __init__.py  env_runner.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  index.js
frontend/src/components/: EnvImpactCounter.jsx  Navbar.jsx  PipelineBar.jsx
frontend/src/pages/: BulkConsumerPortal.jsx  CollectorPortal.jsx  HomePage.jsx  RecyclerPortal.jsx
frontend/src/utils/: api.js
models/: __init__.py  trainer.py
models/saved/: model_meta.json
pipeline/: __init__.py  main_pipeline.py  oracle.py  preprocessor.py  reasoning.py  scorer.py
rl/: reward_logger.py  rollout_collector.py  trainer.py  training_summary.json
server/: __init__.py  app.py  data_generator.py  environment.py  graders.py  oracle.py  tasks.py
